Create working dataStore, add location services

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,12 @@ dependencies {
     implementation libs.lifecycle.viewmodel.ktx
     implementation libs.navigation.fragment
     implementation libs.navigation.ui
+    implementation libs.play.services.maps
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation libs.datastore.preferences
+    implementation libs.datastore.rxjava3
+    implementation libs.datastore.preferences.rxjava3
+
 }
